# pokers

./: Cargo.toml  LICENSE.txt  README.md
src/: constants.rs  fastdivide.rs  flush_lookup.rs  hand_range.rs  hash_offsets.rs  lib.rs  map.rs  string_lookup.rs  string_lookups.rs
src/equity_calculator/: combined_range.rs  mod.rs  simulator.rs
src/hand_evaluator/: cards.rs  hand.rs  mod.rs
src/lookups/: lookup.rs  mod.rs
