[package]
name = "pokers"
version = "0.6.1"
edition = "2021"
authors = ["EddieMataEwy <eddiemataewy@gmail.com>"]
documentation = "https://docs.rs/pokers"
repository = "https://github.com/EddieMataEwy/pokers"
description = "Rust Poker Library"
license = "MIT"
keywords = ["poker", "holdem"]

[dependencies]
rand = { version = "0.9" }
