[package]
name = "pokers"
version = "0.10.0"
edition = "2024"
authors = ["EddieMataEwy <eddiemataewy@gmail.com>"]
documentation = "https://docs.rs/pokers"
repository = "https://github.com/EddieMataEwy/pokers"
description = "Rust Poker Library"
license = "MIT"
keywords = ["poker", "holdem"]

[dependencies]
rand = { version = "0.10.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom = { version = "0.4.2", features = [] }

[features]
default = []
web = []
